# old-portfolio-w-axum

./: .gitignore  README.md
backend/: .env  Cargo.toml  backend.d  backupcode.txt  libbackend.d
backend/.fingerprint/ahash-22854a9f56cf765e/: lib-ahash  lib-ahash.json
backend/.fingerprint/ahash-2bf25ed560cf2703/: run-build-script-build-script-build  run-build-script-build-script-build.json
backend/.fingerprint/ahash-40172399c4f8b798/: run-build-script-build-script-build  run-build-script-build-script-build.json
backend/.fingerprint/ahash-6a33e8c148a9a56b/: run-build-script-build-script-build  run-build-script-build-script-build.json
backend/.fingerprint/ahash-946d634cf8c69a50/: lib-ahash  lib-ahash.json
backend/.fingerprint/ahash-a4ebdd44a4d069ef/: lib-ahash  lib-ahash.json
backend/.fingerprint/ahash-d9b41c179b23eb06/: build-script-build-script-build  build-script-build-script-build.json
backend/.fingerprint/ahash-dd9e3bffd44543dd/: lib-ahash  lib-ahash.json
backend/.fingerprint/ahash-e06719b1716e8253/: build-script-build-script-build  build-script-build-script-build.json
backend/.fingerprint/ahash-fd09fd845f5fb696/: run-build-script-build-script-build  run-build-script-build-script-build.json
backend/.fingerprint/async-trait-32d5941473cccded/: build-script-build-script-build  build-script-build-script-build.json
backend/.fingerprint/async-trait-744ea6412d4659f5/: run-build-script-build-script-build  run-build-script-build-script-build.json
backend/.fingerprint/async-trait-a2b48404f726234a/: lib-async-trait  lib-async-trait.json
backend/.fingerprint/atoi-0d4c4eea83c9fd5f/: lib-atoi  lib-atoi.json
backend/.fingerprint/atoi-61e8c831f68763cc/: lib-atoi  lib-atoi.json
backend/.fingerprint/autocfg-a93831ca6ce1e40a/: lib-autocfg  lib-autocfg.json
backend/.fingerprint/axum-85e6303a99a75a8d/: run-build-script-build-script-build  run-build-script-build-script-build.json
backend/.fingerprint/axum-b8805067495ebafd/: lib-axum  lib-axum.json
backend/.fingerprint/axum-core-3732884ce36ee8af/: build-script-build-script-build  build-script-build-script-build.json
backend/.fingerprint/axum-core-67448d56483e5fbd/: run-build-script-build-script-build  run-build-script-build-script-build.json
backend/.fingerprint/axum-core-b6a3701bbdf36074/: lib-axum-core  lib-axum-core.json
backend/.fingerprint/axum-e199eb96b9f5360f/: build-script-build-script-build  build-script-build-script-build.json
backend/.fingerprint/axum-macros-04368a9dfc217a12/: lib-axum-macros  lib-axum-macros.json
backend/.fingerprint/backend-4d64f3ed30f051df/: lib-backend  (+1 more)
backend/migration/: Cargo.toml
backend/migrations/: 20230525140110_init.down.sql  20230525140110_init.up.sql  20230531060132_blog.down.sql  20230531060132_blog.up.sql
backend/src/: ctx.rs  error.rs  lib.rs  log.rs  main.rs  model.rs  models.rs  schema.rs
backend/static/: test.html
backend/tests/: quick_dev.rs  test.rs
(+895 files in other folders)
