[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
tokio = { version = "1.28.0", features = ["full"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"