[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros", "headers"] }
bcrypt = "0.14.0"
chrono = { version = "0.4.24", features = ["serde", "rustc-serialize"] }
dotenv = "0.15.0"
hyper = { version = "0.14.26", features = ["full"] }
jsonwebtoken = "8.3.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.9.0"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
