[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" } # depends on your needs
axum = { version = "0.6.18", features = ["macros", "headers"] }
bcrypt = "0.14.0"
dotenv = "0.15.0"
hyper = { version = "0.14.26", features = ["full"] }
jsonwebtoken = "8.3.0"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-time"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
time = ">=0.2.23"
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.9.0"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
